--- a/views/css/blog2.css
+++ b/views/css/blog2.css
@@ -8,9 +8,10 @@
     font-style: normal;
 }
 
-<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
-html, body { margin:0; padding:0; 	font-family: 'Lato', sans-serif; }
+html, body { margin:0; padding:0; 	
+             font-family: 'Lato', sans-serif; 
+}
 
 h1,a h3, h4, h5, h6, p, blockquote, address, big, cite, code, em, font, img, small, strike, sub, sup, li, ol, ul, fieldset, form, label, legend, button, table, caption, tr, th, td {
 	margin:0;
@@ -155,7 +156,7 @@ body a,
 
 /* Page content */
 .content {
-  padding: 16px;
+  padding: 20px;
 }
 
 /* Dropdown button */
